syntax = "proto3";

option csharp_namespace = "Ingredients";

package ingredients;

service IngredientsService {
  rpc GetToppings (GetToppingsRequest) returns (GetToppingsResponse);
  rpc GetCrusts (GetCrustsRequest) returns (GetCrustsResponse);
}

message GetToppingsRequest { }

message GetToppingsResponse {
  repeated AvailableTopping toppings = 1;
}

message Topping {
  string id = 1;
  string name = 2;
  double price = 3;
}

message AvailableTopping {
  Topping topping = 1;
  int32 quantity = 2;
}

message GetCrustsRequest { }

message GetCrustsResponse {
  repeated AvailableCrust crusts = 1;
}

message Crust {
  string id = 1;
  string name = 2;
  int32 size = 3;
  double price = 4;
}

message AvailableCrust {
  Crust crust = 1;
  int32 quantity = 2;
}
